--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -10,11 +10,11 @@
 
 <div class="l2_menu_list">
   <ul>
-    <li><%= link_to("所有朋友", user_friend_relations_path(user))%></li>
+    <li><%= link_to("我的朋友", user_friend_relations_path(user))%></li>
     <li><%= link_to("朋友邀请", friend_invitations_path)%></li>
   </ul>
   <ul>
-    <li><%= link_to("所有球队", user_team_joins_path(user))%></li>
+    <li><%= link_to("我的球队", user_team_joins_path(user))%></li>
     <li><%= link_to("新建球队", new_team_path)%></li>
     <li><%= link_to("球队邀请", team_join_invitations_path)%></li>
     <li><%= link_to("球队申请", team_join_requests_path)%></li>
