--- a/app/views/layouts/unlogin_layout.html.erb
+++ b/app/views/layouts/unlogin_layout.html.erb
@@ -12,6 +12,7 @@
   <%= yield :stylesheet%>
 </head>
 <body>
+<%= render(:partial => 'layouts/qmd')%>
 <div id="main_content">
 <div id="header">
   <%= render(:partial => 'layouts/header_setting')%>
