--- a/app/views/messages/_sidebar_menu.html.erb
+++ b/app/views/messages/_sidebar_menu.html.erb
@@ -1,11 +1,13 @@
 <ul class="sidebar_menu">
-  <li>
-  > <%= link_to '去收件箱', messages_path() %>
+  <li <%= selected_class_sidebar_menu_item(:action=>'index', :boolean=>params[:as]!='sender')%>>
+  > <%= link_to '我的收件箱', messages_path() %>
   </li>
-  <li>
-  > <%= link_to '去发件箱', messages_path(:as => 'sender') %>
+  <li <%= selected_class_sidebar_menu_item(:action=>'index', :boolean=>params[:as]=='sender')%>>
+  > <%= link_to '我的发件箱', messages_path(:as => 'sender') %>
   </li>
   <li class='seperate'>
-    > <%= link_to "返回个人首页", user_view_path(@user) %>
+  </li>
+  <li>
+    > <%= smart_return_user_view_menu_item(@user) %>
   </li>
 </ul>
