--- a/app/views/sidebar_menus/_team_view_team_and_management.html.erb
+++ b/app/views/sidebar_menus/_team_view_team_and_management.html.erb
@@ -1,19 +1,21 @@
 <ul class="sidebar_menu">
-  <li>
+  <li <%= selected_class_sidebar_menu_item(:action=>'index')%>>
   > <%= link_to '队伍成员', team_team_joins_path(@team) %>
   </li>
-  <li>
+  <li <%= selected_class_sidebar_menu_item(:action=>'formation_index')%>>
   > <%= link_to '查看阵型', formation_index_team_joins_path(:team_id => @team) %>
   </li>
   <%if logged_in? && current_user.is_team_admin_of?(@team)%>
-    <li class="seperate">
-    > <%= link_to '成员管理', admin_management_team_joins_path(:team_id => @team) %>
+    <li class="seperate  <%= selected_sidebar_menu_item(:action=>'admin_management')%>">
     </li>
     <li>
-    > <%= link_to '选拔队员', player_management_team_joins_path(:team_id => @team) %>
+      > <%= link_to '成员管理', admin_management_team_joins_path(:team_id => @team) %>
     </li>
-    <li>
-    > <%= link_to '安排阵型', formation_management_team_joins_path(:team_id => @team) %>
+    <li <%= selected_class_sidebar_menu_item(:action=>'player_management')%>>
+      > <%= link_to '选拔队员', player_management_team_joins_path(:team_id => @team) %>
+    </li>
+    <li <%= selected_class_sidebar_menu_item(:action=>'formation_management')%>>
+      > <%= link_to '安排阵型', formation_management_team_joins_path(:team_id => @team) %>
     </li>
   <%end%>
   <div class="clearBoth"></div>
