--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
   <h2></h2>
   <ul class="sidebar_menu">
     <li>
-      > <%= link_to "返回个人首页", user_view_path(@user) %>
+      > <%= smart_return_user_view_menu_item(@user) %>
     </li>
   </ul>
 </div>
@@ -94,7 +94,7 @@
 
   <% form_for(:user, :url => update_image_user_path(@user),:html => { :method=>:put, :multipart => true, :class=>"tab" }) do |f| %>
     <%= hidden_field_tag :tab_index, 2%>
-    <%= user_image_tag @user, {:style=>"margin:20px 0 0 0"} %>
+    <%= user_image_tag @user, {:class=>'icon', :style=>"margin:20px 0 0 0"} %>
     <p>
       <label>更改头像</label><br/>
       <%= f.file_field  :uploaded_data %>
