--- a/app/views/calendar/show_a_day.html.erb
+++ b/app/views/calendar/show_a_day.html.erb
@@ -17,10 +17,14 @@
       > <%= day_calendar_link "下一天的活动", @date.tomorrow, @user || @team%>
     </li>
     <li class="seperate">
+    </li>
+    <li>
       > <%= month_calendar_link "本月的活动", @date, @user || @team%>
     </li>
     <li class="seperate">
-      > <%= link_to "返回个人首页", user_view_path(@user) if @user%>
+    </li>
+    <li>
+      > <%= smart_return_user_view_menu_item(@user) if @user%>
       <%= link_to "返回队伍首页", team_view_path(@team) if @team%>
     </li>
   </ul>
