--- a/app/views/friend_relations/index.html.erb
+++ b/app/views/friend_relations/index.html.erb
@@ -1,5 +1,5 @@
 <div id="wide_left_content" class="sect">
-  <h2><%= h @title%></h2>
+  <h2><%= smart_nickname @user%>的朋友</h2>
   <%= user_icon(@friendsList)%>
 </div>
 
