--- a/app/views/layouts/_search_panel.html.erb
+++ b/app/views/layouts/_search_panel.html.erb
@@ -8,11 +8,11 @@
   <table><tr>
   <td class="dropdown_container">
     <%= image_tag 'default_user_tiny.gif', :width=>20, :height=>20%>
-    <ul class="dropdown" style="top:20px;left:0px;width:100px">
+    <div class="dropdown" style="top:20px;left:0px;width:100px">
       <%search_paths.values.each do |v|%>
-        <li><%= v[:link_to]%></li>
+        <%= v[:link_to]%>
       <%end%>
-    </ul>
+    </div>
   </td>
   <td><%= text_field_tag 'q', '', :size=>15 %></td>
   <td><%= submit_tag '', :class=>"submit search", :title=>'搜索' %></td>
