--- a/app/views/layouts/team_layout.html.erb
+++ b/app/views/layouts/team_layout.html.erb
@@ -12,6 +12,7 @@
   <%= yield :stylesheet%>
 </head>
 <body>
+<%= render(:partial => 'layouts/qmd')%>
 <div id="main_content">
 <div id="header">
   <%= link_to team_image_tag(@team), team_view_path(@team), :id=>"header_icon" %>
