--- a/app/views/layouts/user_layout.html.erb
+++ b/app/views/layouts/user_layout.html.erb
@@ -12,7 +12,7 @@
   <%= yield :stylesheet%>
 </head>
 <body>
-<div id="qmd"></div>
+<%= render(:partial => 'layouts/qmd')%>
 <div id="main_content">
 <div id="header">
   <%= link_to user_image_tag(@user), user_view_path(@user), :id=>"header_icon" %>
