--- a/app/views/team_join_invitations/new_by_user_id.html.erb
+++ b/app/views/team_join_invitations/new_by_user_id.html.erb
@@ -25,7 +25,7 @@
   <h2></h2>
   <ul class="sidebar_menu">
     <li>
-      > <%= link_to "返回个人首页", user_view_path(@user) %>
+      > <%= smart_return_user_view_menu_item @user %>
     </li>
   </ul>
 </div>
