--- a/app/views/team_joins/player_management.html.erb
+++ b/app/views/team_joins/player_management.html.erb
@@ -7,7 +7,7 @@
   <div class="sect">
     <h2>队员名单</h2>
     <%@player_uts.each do |ut| %>
-      <div style="float:left">
+      <div class="icon_select">
         <%= user_icon(ut.user)%>
         <div>
           <span>首选位置: <%= position_text ut.user.premier_position%></span><br/><br/>
@@ -22,7 +22,7 @@
   <div class="sect">
     <h2>可选的队员</h2>
     <%@other_uts.each do |ut| %>
-      <div style="float:left">
+      <div class="icon_select">
         <%= user_icon(ut.user)%>
         <div>
           <span>首选位置: <%= position_text ut.user.premier_position%></span><br/><br/>
