--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -10,19 +10,20 @@
       <%=date_div_link @training.start_time, @team%>
       <%= render :partial => 'shared/activity', :object => @training%>
       <div class="clearBoth"></div>
-      <%if logged_in?%> 
-        <div style="float:right">
-          <%links = []%>
-          <%if @training.can_be_modified_by?(current_user)%>
-            <%links << "> #{link_to '修改', edit_training_path(@training)}"%>
-          <%end%>
-          <% if @training.can_be_destroyed_by?(current_user) %>
-            <%links << "> #{link_to '取消', training_path(@training), :method=>'delete', :confirm=>'真的要取消这次训练吗？'}"%>
-          <%end%>
-          <%= links_with_sticks links%>
-        </div>
-      <%end%>
     </div>
+    <%if logged_in?%> 
+      <div style="float:right">
+        <%links = []%>
+        <%if @training.can_be_modified_by?(current_user)%>
+          <%links << "> #{link_to '修改', edit_training_path(@training)}"%>
+        <%end%>
+        <% if @training.can_be_destroyed_by?(current_user) %>
+          <%links << "> #{link_to '取消', training_path(@training), :method=>'delete', :confirm=>'真的要取消这次训练吗？'}"%>
+        <%end%>
+        <%= links_with_sticks links%>
+      </div>
+    <%end%>
+    <div class="clearBoth"></div>
   </div>
 
 <%if !@training.summary.blank?%>
